--- a/Z-A-S News.css
+++ b/Z-A-S News.css
@@ -62,6 +62,15 @@ h1 {
     }
 
 
+
+.article-pic{
+  width: auto;   
+ height: inherit;
+        
+            }
+
+
+
     .HeaderTitle {
       color: #e5f1f7;
       text-align: center;
