--- a/style.css
+++ b/style.css
@@ -123,9 +123,7 @@ transition: all 0.15s;
 
 
 
-  section{
-    background-color: hsl(290, 38%, 47%);
-  }
+
 
 
 
@@ -255,6 +253,7 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
   footer {
     text-align: center;
     margin-top: 10px;
+    margin-bottom: -8px;
     padding: 15px;
     background-color: hsl(290, 38%, 47%);
     background-image: 
@@ -269,7 +268,7 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
     background-color: transparent;
     position: relative;
     margin-bottom: 25px;
-    
+    margin-top: -12px;
   }
 
   
