--- a/style.css
+++ b/style.css
@@ -1,56 +1,77 @@
+:root {
+--main: #FAF7F0;
+--secondarybg: #eeebe3;
+--maintext: #640D5F;
+--secondarytext: #D91656;
+--link: #7e1178;
+--linkhover: #c01bb8;
+--linkactive: #500c4b;
+--button: #640D5F;
+--fillcolor: #435670;
+--flipped: #272727;
+}
+
+.darkmode{
+  --main: #272727;
+--secondarybg: #3b3b3b;
+--maintext: #8f4ae2;
+--secondarytext: #36ebd9;
+--link: #BB86FC;
+--linkhover: #cba0ff;
+--linkactive: #7945b8;
+--button: #cba0ff;
+--fillcolor: #fffcf6;
+--flipped: #FAF7F0;
+}
+
+
+
 body, main {
-  font-family: 'Roboto', sans-serif;
-  background-color: hsl(290, 38%, 47%);
-  color: #f5f5f5;
+    font-family: 'Roboto', sans-serif !important;
+    background-color: var(--main);
+    transition: 3s color, backgroundcolor;
 
 }
 
   header, footer{
-    color: #e1f9ff;
+    color: var(--maintext) !important; 
     margin-bottom: 0px;
-    border-radius: 25px;
+    border-radius: 5px;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
     transition: all 0.2s;
+
+    transition: .3s color, backgroundcolor;
+
+  }
+.active {
+background-color: var(--button) !important;
+color: var(--main) !important;
+
+}
+
+.active:hover {
+  background-color: var(--link) !important;
+  color: var(--main) !important;
+  
   }
 
-
-  .HeaderTitle {
-    text-align: center;
-    font-size: 30px;
-    text-decoration: none;
-    margin: 0 auto;
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-
-  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-  font-weight: bold;
-  color: transparent;
-  background-clip: text;
-  background-color: hsl(290, 100%, 80%);
-  background-image: 
-     radial-gradient(at 0% 50%, rgb(135, 191, 255) 0px, transparent 50%),
-     radial-gradient(at 0% 100%, rgb(130, 255, 224) 0px, transparent 50%),
-     radial-gradient(at 80% 100%, rgb(255, 139, 228) 0px, transparent 50%);
-     transition: all 0.2s;
-}
-
-
-
-
-.idkwhereislogoclass{
-  border-radius: 50px;
-}
+  .active:active {
+    background-color: var(--linkactive) !important;
+    color: var(--secondarybg) !important;
+    
+    }
 
   html {
     scroll-behavior: smooth;
+    transition: .3s color, backgroundcolor !important;
+
   }
 
 
 
   .fade-in {
     opacity: 0;
+    transform: translateY(20px);
     transition: opacity 0.8s ease-in-out;
   }
 
@@ -58,20 +79,53 @@ body, main {
 
   .fade-in.visible {
     opacity: 1;
+    transform: translateY(0);
   }
   
 
 
-  .bgtoneswitch {
-    float: right;
-    z-index: 2; 
-    
+ #theme-switch {
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    height: 50px;
+    width: 50px;
+    padding: 0;
+    border-radius: 50%;
+    background-color: var(--secondarybg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+    border: transparent;
+
   }
 
 
 
+#theme-switch svg {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+
+}
+
+#theme-switch svg:last-child{
+  display: none;
+}
+
+.darkmode #theme-switch svg:first-child{
+  display: none;
+}
+
+.darkmode #theme-switch svg:last-child{
+  display: block;
+}
+
+
 .link{
-color: #bde7f8;
+color: var(--link); 
 transition: 0.15s;
 text-decoration: none;
 }
@@ -79,28 +133,29 @@ text-decoration: none;
 
 
 .link:hover{
-  color: #66b0ce;
+  color: var(--linkhover); 
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.05);
   }
 
 
 
   .link:active{
-    color: #49a1c4;
+    color: var(--linkactive); 
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
   }
 
 
 
-  h1, h2, h3 {
-    color: #bde7f8;
+  h1, h2, h3, h4, h5 {
+    color: var(--maintext) !important;
+    font-family: 'Roboto', sans-serif !important; 
   }
 
 
   
   p {
-    color: #deedf3;
-    font-family: arial;
+    color: var(--secondarytext);
+    font-family: 'Roboto', sans-serif !important;
     font-size: 18px;
   }
 
@@ -113,26 +168,39 @@ text-decoration: none;
     border-radius: 60px;
   }
 
+.nav-pills{
+  margin-top: 10px;
+  margin-right: 5%;
+    margin-left: 2%;
+    display: flex;
+}
+
+.nav-item{
+  text-align: center !important;
+  align-items: center ;
+  align-self: center;
+}
 
 
   .email {
+    color: var(--maintext);
+  background-color: var(--main);
     border: none;
 height: 30px;
 width: auto;
-border-radius: 25px;
+border-bottom-left-radius: 25px;
+border-top-left-radius: 25px;
 text-align: center;
 box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
 transition: all 0.15s;
+font-family: 'Roboto', sans-serif !important;
+margin-right: -5px;
+
   }
-
-
-
-
-
-
 
 .email:hover{
   box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
+  
 }
 
 
@@ -145,17 +213,15 @@ transition: all 0.15s;
 
   .newsletter {
    align-items: center;
-   background-color: hsl(290, 56%, 42%);
-background-image: 
-   radial-gradient(at 0% 50%, hsla(145,80%,45%,1) 0px, transparent 50%),
-   radial-gradient(at 0% 100%, hsla(231,64%,51%,1) 0px, transparent 50%),
-   radial-gradient(at 80% 100%, hsla(314,100%,70%,1) 0px, transparent 50%);
+   background-color: var(--secondarybg);
     text-align: center;
     padding: 100px 0;
     border-radius: 20px;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
     margin-top: 40px;
-    transition: all 0.2s, background-color 2.5s;
+    transition: all 0.2s, background-color .2s;
+    font-family: 'Roboto', sans-serif !important;
+
   }
 
 
@@ -164,10 +230,7 @@ background-image:
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
   }
 
-  .newsletter:hover{
 
-    background-color: hsl(271, 48%, 40%);
-  }
 
   .newsletter-content {
     max-width: 800px;
@@ -177,36 +240,40 @@ background-image:
 
 
   .submit-button{
-background-color: #bde7f8;
+background-color: var(--link);
 border: none;
 height: 30px;
-width: 62px;
-border-radius: 12px;
+margin-left: -2px;
+margin-right: 4px;
+color: var(--main);
+border-bottom-right-radius: 12px;
+border-top-right-radius: 12px;
 cursor: pointer;
 transition: 0.15s;
 box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
+font-family: 'Roboto', sans-serif !important;
   }
 
 
 
   .submit-button:hover{
-    background-color: #49a1c4;
+    background-color: var(--linkhover);
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
   }
 
 
 
   .submit-button:active{
-    background-color: #1f92c0;
-    color: rgb(27, 27, 27);
+    background-color: var(--linkactive);
+    color: var(--secondarybg);
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.05);
   }
 
 
 
   .button {
-    background-color: #60697c;
-    color: #a5edff;
+    background-color: var(--maintext);
+    color: var(--secondarybg);
     padding: 15px 30px;
     border: none;
     border-radius: 5px;
@@ -216,7 +283,7 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
 
 
   .button:hover {
-    background-color: #537392;
+    background-color: var(--maintext);
   }
   
 
@@ -228,7 +295,7 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
 
   
   .news-item {
-    background-color: #748faa;
+    background-color: var(--secondarybg);
     border-radius: 10px;
     margin-bottom: 40px;
     padding: 20px;
@@ -259,91 +326,43 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
     margin-top: 10px;
     margin-bottom: -8px;
     padding: 15px;
-    background-color: hsl(290, 38%, 47%);
+    background-color: var(--secondarybg) !important;
     background-image: 
-       radial-gradient(at 0% 50%, rgb(133, 37, 197) 0px, transparent 50%),
-       radial-gradient(at 0% 100%, rgb(68, 206, 172) 0px, transparent 50%),
-       radial-gradient(at 80% 100%, hsla(314,100%,70%,1) 0px, transparent 50%);
+       radial-gradient(at 0% 50%, var(--main) 0px, transparent 50%),
+       radial-gradient(at 80% 100%, var(--main) 0px, transparent 50%) !important;
   }
 
 
   
   header{
-    background-color: transparent;
     position: relative;
     margin-bottom: 25px;
-    margin-top: -12px;
+    margin-top: -15px;
+        background-color: var(--secondarybg) !important; 
+    position: relative;
+    margin-bottom: 25px;
   }
 
-  
-  .dheader{
-    background-color: #748faa;
-    position: relative;
-    margin-bottom: 25px;
-    
-  }
 
   .alert {
-    display: none;
     padding: 20px;
-    background-color: #ebcc1f; 
-    color: white;
+    background-color: var(--maintext); 
+    color: #ffffff;
     margin-bottom: 15px;
     border-radius: 10px;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
     transition: all 0.2s;
   }
-
-
-
-  .alert:hover, .alert2:hover{
+.nonedisplay{
+  display: none;
+}
+  .alert:hover{
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
   }
-
-
   
   .closebtn {
     margin-left: 15px;
-    color: white;
-    font-weight: bold;
-    float: right;
-    font-size: 22px;
-    line-height: 20px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-
-
-
-  .closebtn:hover {
-    color: rgb(201, 0, 0);
-    font-size: 30px;
-  }
-
-
-
-  .closebtn:active {
-    color: rgb(167, 0, 0);
-    font-size: 27px;
-  }
-
-
-
-  .alert2 {
-    padding: 20px;
-    background-color: #0f395f; 
-    color: white;
-    margin-bottom: 15px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
-    transition: all 0.2s;
-  }
-
-  
-  
-  .closebtn2 {
-    margin-left: 15px;
-    color: white;
+    color: var(--secondarybg);
     font-weight: bold;
     float: right;
     font-size: 22px;
@@ -354,14 +373,14 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
 
   
  
-  .closebtn2:hover {
+  .closebtn:hover {
     color: rgb(201, 0, 0);
     font-size: 30px;
   }
 
 
 
-  .closebtn2:active {
+  .closebtn:active {
     color: rgb(167, 0, 0);
     font-size: 27px;
     transition: 0.15s;
@@ -407,6 +426,8 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
   transition: all 0.3s ease;
 position: sticky;
 z-index: 1000; 
+border-radius: 50%;
+margin: 5px;
 }
 
 
@@ -423,7 +444,7 @@ margin-left: 8px;
 
 
 .latestheader {
-  background-color: hsla(290, 74%, 66%, 0.5);
+  background-color: var(--main);
   position: fixed;
   top: 0;
   left: 0;
@@ -441,7 +462,7 @@ align-items: center;
   .slide-in-left {
     opacity: 0;
     transform: translateX(-100%); 
-    transition: all 0.6s ease-out;
+    transition: all 0.4s ease-out;
   }
 
   
@@ -456,7 +477,7 @@ align-items: center;
   .slide-in-right {
     opacity: 0;
     transform: translateX(100%); 
-    transition: all 0.6s ease-out;
+    transition: all .4s ease-out;
   }
 
   
@@ -478,33 +499,20 @@ align-items: center;
     border: none;
     outline: none;
     align-items: center;
-    background-color: hsl(160, 56%, 42%);
-    background-image: 
-       radial-gradient(at 0% 50%, hsla(145,80%,45%,1) 0px, transparent 50%),
-       radial-gradient(at 0% 100%, hsla(231,64%,51%,1) 0px, transparent 50%),
-       radial-gradient(at 80% 100%, hsla(314,100%,70%,1) 0px, transparent 50%);
+    background-color: var(--secondarytext);
     color: white;
     cursor: pointer;
     padding: 15px;
     border-radius: 10px;
     text-decoration: none;
     overflow: hidden;
-    transition: color 0.2s ease, background-color 0.2s ease;
-    transition: all 0.7s;
-
-}
-
+    transition: opacity 0.5s ease;
+  }
 
 
 #scrollBtn:hover {
-  background-color: hsl(290, 56%, 42%);
-  background-image: 
-     radial-gradient(at 0% 50%, hsla(145,80%,45%,1) 0px, transparent 50%),
-     radial-gradient(at 0% 100%, hsla(231,64%,51%,1) 0px, transparent 50%),
-     radial-gradient(at 80% 100%, hsla(314,100%,70%,1) 0px, transparent 50%);
-
+opacity: .75;
 }
-
 
 
 #scrollBtn::before {
