--- a/style.css
+++ b/style.css
@@ -473,6 +473,20 @@ font-family: 'Roboto', sans-serif !important;
   align-items: center;
 }
 
+.loading2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondarybg);
+  color: var(--maintext);
+  z-index: 9990;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .fade-out {
   animation: fadeOut 0.5s forwards;
