--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ border: 0;
       position: relative;
       background-size: cover;
       background-position: center;
+       overflow: hidden;
     }
     
     .card-cover::before {
