--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
     margin-bottom: -8px;
     padding: 15px;
     background-color: var(--secondarybg) !important;
+    border: none !important; 
   }
 
 
@@ -454,11 +455,11 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
 
 
 .topheadlines1 {
-    color: var(--link);
+    color: var(--maintext);
 }
 
 .topheadlines2{
-  color: rgb(115, 153, 40);
+  color: var(--secondarytext);
 }
 
 
