--- a/style.css
+++ b/style.css
@@ -160,8 +160,8 @@ border: 0;
 
   html {
     scroll-behavior: smooth;
-    transition: .3s color, backgroundcolor !important;
-
+    transition: 0.3s color, backgroundcolor !important;
+    transition: opacity 0.6s ease-in-out, visibility 0.6s ease-in-out;
   }
 
 .text-white
@@ -372,17 +372,20 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
 
 
 @media (hover: hover) {
-  .carousel-control-next, .carousel-control-prev {
-    display: none;
+.carousel-control-next, .carousel-control-prev {
+   opacity: 0;
+   visibility: hidden; 
   }
 
 .carousel:hover .carousel-control-next, .carousel:hover .carousel-control-prev {
-display: flex;
+   opacity: 1;
+   visibility: visible;
 }
 
 @media (hover: none) {
-  .carousel-control-next, .carousel-control-prev {
-    display: flex;
+.carousel-control-next, .carousel-control-prev {
+   opacity: 1;
+   visibility: visible;
   }
 }
 
