--- a/style.css
+++ b/style.css
@@ -370,6 +370,9 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
   }
   
 
+.carousel-control-next, .carousel-control-prev {
+transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+}
 
 @media (hover: hover) {
 .carousel-control-next, .carousel-control-prev {
