--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
    opacity: 1;
    visibility: visible;
 }
-
+}
 @media (hover: none) {
 .carousel-control-next, .carousel-control-prev {
    opacity: 1;
@@ -397,33 +397,54 @@ transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
   color: var(--button) !important;
 }
 
-.card-text-home {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+.card-text-Home {
+  line-height: 1.4;
+  height: calc(1.4em * 2);
   overflow: hidden;
 }
 
- .card-title-home {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+
+.card-title-Home {
+  line-height: 1.4;
+  height: calc(1.4em * 2);
   overflow: hidden;
 }
 
-  .card-text-discover {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+.card-text-discover {
+  line-height: 1.2;
+  height: calc(1.2em * 3);
   overflow: hidden;
 }
 
-  .card-title-discover {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+
+.card-title-discover {
+  line-height: 1.5;
+  height: calc(1.5em * 2);
   overflow: hidden;
 }
+
+
+
+.card-meta {
+  height: 1.5em; /* locks vertical alignment across cards */
+}
+
+.category-text {
+  font-size: 0.85rem;
+  color: #6c757d; /* Bootstrap's text-secondary */
+}
+
+/* Prevent category from pushing the date */
+.card-meta strong {
+  max-width: 70%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
+
   
   .news-item {
     background-color: var(--secondarybg);
