--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
   font-weight: 600;
   opacity: 0;
   animation: fadeInMsg 0.4s ease forwards;
-
+}
 
   select[multiple]::-webkit-scrollbar {
     width: 8px;
