--- a/style.css
+++ b/style.css
@@ -368,11 +368,11 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
 
 
 .jumbotron {
-    background-color: var(--secondarybg);
+    background-color: var(--main);
     color: var(--maintext);
-    padding: 30px;
+    padding: 15px;
+    border-color: (var(--secondarybg));
     border-radius: 15px;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.15);
     transition: all 0.2s;
   }
 
