--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ border: 0;
 }
 
 
- #theme-switch {
+ .theme-switch {
     position: fixed;
     bottom: 20px;
     left: 30px;
@@ -203,22 +203,22 @@ border: 0;
 
 
 
-#theme-switch svg {
+.theme-switch svg {
   height: 100%;
   width: 100%;
   border-radius: 50%;
 
 }
 
-#theme-switch svg:last-child{
+.theme-switch svg:last-child{
   display: none;
 }
 
-.darkmode #theme-switch svg:first-child{
+.darkmode .theme-switch svg:first-child{
   display: none;
 }
 
-.darkmode #theme-switch svg:last-child{
+.darkmode .theme-switch svg:last-child{
   display: block;
 }
 
@@ -1080,3 +1080,32 @@ li {
     .cta-group .btn { flex:1 1 0; min-width:160px; max-width:320px; }
     
     .hero-buttons { display:flex; flex-direction:column; gap:1rem; align-items:center; justify-content:center; height:100%; }
+
+
+
+
+  .theme-switch-alt {
+    background-color: var(--main);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+.theme-switch-alt svg {
+  height: 100%;
+  width: 100%;
+}
+
+.theme-switch-alt svg:last-child{
+  display: none;
+}
+
+.darkmode .theme-switch-alt svg:first-child{
+  display: none;
+}
+
+.darkmode .theme-switch-alt svg:last-child{
+  display: block;
+}
