--- a/style.css
+++ b/style.css
@@ -397,8 +397,8 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
 
 
   .button {
-    background-color: var(--maintext);
-    color: var(--secondarybg);
+    background-color: var(--button);
+    color: var(--maintext);
     padding: 15px 30px;
     border: none;
     border-radius: 5px;
@@ -408,7 +408,7 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
 
 
   .button:hover {
-    background-color: var(--maintext);
+    background-color: var(--linkactive);
   }
   
 
@@ -1094,8 +1094,8 @@ li {
 
 
 .theme-switch-alt svg {
-  height: 10%;
-  width: 10%;
+  height: 100%;
+  width: 100%;
 }
 
 .theme-switch-alt svg:last-child{
