--- a/style.css
+++ b/style.css
@@ -1089,13 +1089,14 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
   }
 
 
 
 .theme-switch-alt svg {
-  height: 100%;
-  width: 100%;
+  height: auto;
+  width: auto;
 }
 
 .theme-switch-alt svg:last-child{
